test/expected/explain_wt-c89.out
explain wchar_t x
        ^
9: error: "wchar_t": unsupported type until C95
